"Quick fix" to improve readability
Based on https://github.com/zooniverse/Panoptes-Front-End/pull/2331

Key features:

* White background and black text on all project pages
* Small padding above and below embedded images
* Change owner/collaborator to tags to be readable on white background

--- a/css/project-page.styl
+++ b/css/project-page.styl
@@ -140,6 +140,22 @@
   font-size: .75em
   color: #CDCDCD
 
+.project-text-content
+  background: rgba(255,255,255,0.85)
+  padding: 1.5em 3vw
+  color: #000000
+  border-radius: 3px
+
+  .project-role
+    color: #ffffff
+    background-color: #555555
+    padding: 0.1em 0.4em
+
+    &.owner
+      background-color: #1277fd
+
+  img
+    padding: 5px 0
 
 .project-metadata
   padding: 1.5em 3vw
